# jupyterhealth-sof-provider-template

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  conftest.py  cookiecutter.json  dashboard.ipynb  docker-compose.yml  fly.toml.example  jupyter_server_config.py  pyproject.toml
.github/workflows/: test.yaml
docs/: QUICKSTART.md  deployment.md  ehr-registration.md
examples/: README.md  cgm-dashboard.ipynb
hooks/: post_gen_project.py
provider_app/: identity.py  jhe_auth.py  patient_resolver.py
scripts/: init-env.sh
tests/: conftest.py  test_generation.py  test_jhe_auth.py  test_jhe_data.py  test_launch_context.py  test_patient_resolver.py  test_smoke.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  Dockerfile  README.md  dashboard.ipynb  fly.toml.example  jupyter_server_config.py  pyproject.toml  voila.json
{{cookiecutter.project_slug}}/docs/: QUICKSTART.md  deployment.md  ehr-registration.md  epic-registration.md
{{cookiecutter.project_slug}}/provider_app/: __init__.py  jhe_auth.py  jhe_data.py  launch_context.py  patient_resolver.py
{{cookiecutter.project_slug}}/tests/: test_smoke.py
