[project]
name = "jupyterhealth-sof-provider-template"
version = "0.1.0"
description = "Cookiecutter template for SMART on FHIR provider apps on JupyterHealth Exchange"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "cookiecutter>=2.5",
    "pytest>=8.0",
    "pytest-cookies>=0.7",
    "jupyterhealth-client>=0.2.0",
    "pandas>=2.0",
    "nbclient>=0.9",
    "nbformat>=5.9",
    "plotly>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
