[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "SMART on FHIR provider app on JupyterHealth Exchange"
requires-python = ">=3.11"
dependencies = [
    "jupyter-smart-on-fhir==0.1.0a3",
    "jupyterhealth-client>=0.2.0",
    "voila>=0.5",
    "jupyter-server>=2.0",
    "pandas>=2.0",
    "plotly>=5.0",
    "requests>=2",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "nbformat>=5.9"]

[tool.setuptools]
packages = ["provider_app"]
